[package]
edition = "2021"
name = "mmt"
version = "0.2.0"

[dependencies]
chrono = "0.4"
is_copy = "0.1"
kamadak-exif = "0.5"
log = "0.4"
md5 = "0.7"
rusqlite = "0.28"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2.3"

[dev-dependencies]
criterion = {version = "0.4", features = ["html_reports"]}

[[bench]]
harness = false
name = "same_file_benchmark"
