[package]
authors = ["Zhao Guangjian<zgj0315@gmail.com>"]
description = "Multimedia Management Tool"
documentation = "https://docs.rs/mmt"
edition = "2021"
keywords = ["multimedia", "tool", "copy_file"]
license-file = "LICENSE"
name = "mmt"
readme = "README.md"
repository = "https://github.com/zgj0315/mmt/"
version = "0.2.4"

[[bin]]
name = "copy_file"
path = "src/copy_file.rs"

[dependencies]
chrono = "0.4"
dev_util = "0.1"
is_copy = "0.1"
kamadak-exif = "0.5"
log = "0.4"
rusqlite = "0.28"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2.3"
